backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recette-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recette-app
  template:
    metadata:
      labels:
        app: recette-app
    spec:
      containers:
      - name: recette-app
        image: mehdi0267/recette-app:latest
        ports:
        - containerPort: 3000
