backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recette-service
spec:
  selector:
    app: recette-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: LoadBalancer
