backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: recette.local
    http:
      paths:
      - path: /recipes
        pathType: Prefix
        backend:
          service:
            name: recette-service
            port:
              number: 80
